--- a/package.json
+++ b/package.json
@@ -12,42 +12,41 @@
     "angular": "^1.2.18",
     "angular-mocks": "^1.2.18",
     "angular-sanitize": "^1.2.18",
-    "conventional-changelog": "^0.5.3",
-    "conventional-recommended-bump": "0.0.3",
-    "del": "~0.1.1",
-    "event-stream": "~3.1.0",
+    "conventional-changelog": "^1.1.17",
+    "conventional-recommended-bump": "^2.0.6",
+    "del": "^3.0.0",
+    "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
-    "gulp-angular-templatecache": "^1.8.0",
-    "gulp-bump": "^1.0.0",
+    "gulp-angular-templatecache": "^2.2.0",
+    "gulp-bump": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-conventional-changelog": "^0.7.0",
-    "gulp-filenames": "^2.0.0",
-    "gulp-footer": "^1.0.5",
-    "gulp-git": "^1.4.0",
-    "gulp-header": "^1.7.1",
+    "gulp-conventional-changelog": "^1.1.17",
+    "gulp-filenames": "^4.0.1",
+    "gulp-footer": "^2.0.1",
+    "gulp-git": "^2.5.2",
+    "gulp-header": "^2.0.1",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
-    "gulp-plumber": "^0.6.3",
-    "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-replace": "^0.6.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-tag-version": "^1.3.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^2.2.19",
-    "jquery": "~1.11",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jquery": "^3.3.1",
     "jshint": "^2.9.1",
-    "jshint-stylish": "~0.3.0",
-    "karma": "^0.12.16",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-coverage": "~0.2",
-    "karma-firefox-launcher": "~0.1",
-    "karma-jasmine": "~0.2",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "run-sequence": "^1.1.5",
-    "streamqueue": "^1.1.1",
-    "title-case": "^1.1.2"
+    "jshint-stylish": "^2.2.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-ng-html2js-preprocessor": "^1.0.0",
+    "run-sequence": "^2.2.1",
+    "streamqueue": "^1.1.2",
+    "title-case": "^2.1.1"
   },
   "scripts": {
     "test": "gulp test"
@@ -58,5 +57,8 @@
       "dist/select.css"
     ]
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jasmine": "^3.1.0"
+  }
 }
