--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-tag-version": "^1.3.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.2.1",
@@ -58,7 +59,5 @@
     ]
   },
   "license": "MIT",
-  "dependencies": {
-    "jasmine": "^3.1.0"
-  }
+  "dependencies": {}
 }
